@@ -1,3 +1,7 @@
+2008-04-29T05:43	Joseph Lombrozo <digitaljeebus@gmail.com>
+	* src/Core/Targets/VS2008Target.cs
+	- Enabled embedded solutions to contain Files.
+
 2008-04-29T04:13	Joseph Lombrozo <digitaljeebus@gmail.com>	
 	* src/Core/VSVersion.cs
 	- Fixed spelling mistake in enum comment.
